@@ -434,6 +434,20 @@
                     </executions>
                     <configuration>
                         <skip>${maven.failsafe.skip}</skip>
+                        <additionalClasspathElements>
+                            <additionalClasspathElement>${mysql-connector-java.jar.location}</additionalClasspathElement>
+                            <additionalClasspathElement>${ojdbc14.jar.location}</additionalClasspathElement>
+                        </additionalClasspathElements>
+                        <useSystemClassLoader>${maven.failsafe.useSystemClassLoader}</useSystemClassLoader>
+                        <useFile>false</useFile>
+                        <failIfNoTests>false</failIfNoTests>
+                        <includes>
+                            <include>${maven.failsafe.includes}</include>
+                        </includes>
+                        <forkMode>${maven.failsafe.forkmode}</forkMode>
+                        <forkedProcessTimeoutInSeconds>${maven.failsafe.forkedProcessTimeoutInSeconds}</forkedProcessTimeoutInSeconds>
+                        <reportFormat>plain</reportFormat>
+                        <argLine>-Dalt.config.location="${alt.config.location}" -Xmx1024m -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled</argLine>
                     </configuration>
                 </plugin>
 
